--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@auth-kit/react-router": "^3.1.3",
     "@clerk/clerk-react": "^5.7.0",
+    "@clerk/themes": "^2.1.27",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
