--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@auth-kit/react-router": "^3.1.3",
     "@clerk/clerk-react": "^5.7.0",
     "@clerk/themes": "^2.1.27",
@@ -13,15 +14,22 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.16.7",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.20.6",
     "chart.js": "^4.4.4",
     "font-awesome": "^4.7.0",
+    "html-react-parser": "^5.1.15",
+    "millify": "^6.1.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-auth-kit": "^3.1.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^4.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
