--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.6",
     "chart.js": "^4.4.4",
+    "chartjs-adapter-moment": "^1.0.1",
     "font-awesome": "^4.7.0",
     "html-react-parser": "^5.1.15",
     "millify": "^6.1.0",
