--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.6",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "chartjs-adapter-moment": "^1.0.1",
     "font-awesome": "^4.7.0",
