--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-react-parser": "^5.1.15",
     "millify": "^6.1.0",
     "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-auth-kit": "^3.1.3",
     "react-chartjs-2": "^5.2.0",
